# personal-website-app-go

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  README.md  deploy.sh  docker-compose.yml  init.sql  start-backend.bat  start-frontend.bat  start-full.bat  start.bat  start.sh  test-api.ps1  test-i18n.ps1
.codegraph/: daemon.pid
.github/: dependabot.yml
.github/workflows/: ci.yml
desktop/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json  vite.config.ts
desktop-admin/: .env.example  README.md  package.json
desktop-admin/src-tauri/capabilities/: main.json
desktop-admin/src-tauri/src/: lib.rs
desktop-admin/src/app/: RouteError.tsx  providers.tsx
desktop-admin/src/layouts/: AppShell.tsx
desktop-admin/src/styles/: index.css
desktop/docs/: ANDROID_BUILD.md
desktop/scripts/: build-android.mjs
desktop/src/: main.tsx  vite-env.d.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: main.json
desktop/src-tauri/src/: lib.rs  main.rs
desktop/src-tauri/src/commands/: credentials.rs  external_url.rs  mod.rs  user_credentials.rs
desktop/src/app/: App.tsx  AppShell.tsx  RouteErrorBoundary.tsx  router.tsx
desktop/src/styles/: index.css
docker/: entrypoint.sh  nginx.conf  supervisord.conf
docs/: article-password-lock-mysql-redis-adapter.md  backup-and-restore.md  baota-docker-deploy.md  baota-go-vue-deploy.md  baota-redis-cache-rate-limit.md  desktop-app-development-spec.md  desktop-blog-development-spec.md  docker-go-vue-deploy.md  feature-roadmap.md  go-backend-migration-spec.md  release-security.md  static-frontend-article-guide.md  user-email-login.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/api/: mockApi.js
frontend/src/components/: AccessAlert.jsx  ArticleCard.jsx  AvatarCropper.jsx  CommentSection.jsx  CursorEffects.jsx  DeferredMount.jsx  Footer.jsx  HomeBackgroundCustomizer.jsx  LanguageSwitcher.jsx  Live2DWidget.jsx  MusicPlayer.jsx  Navbar.jsx  OptimizedImage.jsx  ParticleBackground.jsx  (+3 more)
go_back/: DESKTOP_AUTH.md  go.mod  go.sum
l2d-widget/: CHANGELOG.md  eslint.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  typedoc.config.cjs  vite.config.ts  vite.demo.config.ts
l2d-widget/__tests__/: index.html  main.ts  tsconfig.json
l2d-widget/docs/: index.md
l2d-widget/src/: defaults.ts  types.ts  widget.ts
(+248 files in other folders)
