[package]
name = "personal-blog"
version = "0.1.1"
description = "Desktop client for Personal Blog"
authors = ["Personal Website contributors"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "personal_blog_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
keyring = "3"
tauri = { version = "2", features = [] }
tauri-plugin-http = "2"
tauri-plugin-log = "2"
tauri-plugin-opener = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-store = "2"
url = "2"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
