[package]
name = "personal-blog"
version = "1.2.1"
description = "Cross-platform client for Personal Blog"
authors = ["Personal Website contributors"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "personal_blog_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }
tauri-plugin-http = "2"
tauri-plugin-log = "2"
tauri-plugin-opener = "2"
url = "2"

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3", default-features = false, features = ["windows-native"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
